## 5.9.0 - 2023/xx/xx
ADD Multilines for plxMsg() #542 (lolo3129)
ADD Count of articles for the homepage #659 (bazooka07)
ADD New plxShow::meta_all() function #657 (bazooka07)
ADD plxShow::pageUrl() function for canonical url #654 (bazooka07)
ADD Check the result of plxMotor::parseArticle() in several places #650 (bazooka07)
ADD Build /robots.txt #647 (bazooka07)
ADD Choix profil à partir duquel les médias sont indépendants #643 (bazooka07)
ADD Management of subscribers #637 (bazooka07)
ADD Gestion abonnés pour commentaire #636 (bazooka07)
ADD Pinned articles #628 (bazooka07)
ADD Check if there are articles #602 (bazooka07)
ADD new plxThemes class #601 (bazooka07)
ADD somme CSS rules for auth.php #600 (bazooka07)
ADD Enhance edition of a static page #558 #589 (bazooka07)
ADD Enhance management of users in back/front-office #585 (bazooka07)
ADD plxMsg + anime #578 (bazooka07)
ADD Multi-lines for plxMsg #542 #591 (lolo3129,bazooka07)
ADD new constant PLX_VERSION_DATA - async versions between datas and PluXml #576 (bazooka07)
FIX session in front-end (SameSite attribute) #635 (bazooka07)
FIX homestatic for plxAdmin::editConfiguration() #673 (bazooka07)
FIX plxShow::pagination() #660 (bazooka07)
FIX article.php #656 (bazooka07)
FIX for downloading files #652 (bazooka07)
FIX typo in plxDate::checkDate() #651 (bazooka07)
FIX link for robots.txt #648 (bazooka07)
FIX prepend.php for authentication #646 (bazooka07)
FIX erreur typo #645 (bazooka07)
FIX drop subscriber profil in admin/index.php #644 (bazooka07)
FIX profil name in top.php #642 (bazooka07)
FIX translations #641 (bazooka07)
FIX Enhance menu admin #639 (bazooka07)
FIX parametres_users.php #638 (bazooka07)
FIX for one active user only #634 (bazooka07)
FIX admin/index.php for multi-users #632 (bazooka07)
FIX admin/index.php for multi-users #631 (bazooka07)
FIX Refacto for session #630 (bazooka07)
FIX Refacto plxShow class #629 (bazooka07)
FIX plxPlugins:saeConfig() #627 (bazooka07)