@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document>
-	<title>
-		<![CDATA[defaut]]>
-	</title>
-	<author>
-		<![CDATA[PluXml]]>
-	</author>
-	<version>5.8</version>
-	<date>03/01/2020</date>
+    <title>defaut</title>
+	<author>PluXml</author>
+	<version>5.9</version>
+	<date>20/11/2023</date>
 	<site>https://www.pluxml.org</site>
-	<description>
-		<![CDATA[Thème par défaut de PluXml 5.8]]>
-	</description>
+	<description>PluXml 5.9 default theme</description>
 </document>
